# rust-semverver

./: .travis.yml  Cargo.toml
.github/workflows/: ci.yml
ci/: run.sh
src/: changes.rs  lib.rs  mapping.rs  mismatch.rs  translate.rs  traverse.rs  typeck.rs
tests/: examples.rs  full.rs
tests/full_cases/: libc-0.2.28-0.2.31.linux  libc-0.2.28-0.2.31.osx  log-0.3.4-0.3.8.linux  log-0.3.4-0.3.8.osx  log-0.3.4-0.3.8.windows_msvc  rmpv-0.4.0-0.4.1.osx  rmpv-0.4.0-0.4.1.windows_msvc
