[package]
name = "semververfork"
description = "Automatic verification of SemVer adhrence in rust library crates"
repository = "https://github.com/JohnTitor/rust-semverver"
readme = "README.md"
keywords = ["semver", "plugin"]
categories = ["development-tools", "development-tools::cargo-plugins"]
version = "0.1.63"
authors = ["Inokentiy Babushkin <twk@twki.de>", "Yuki Okushi <huyuumi.dev@gmail.com>"]
license-file = "LICENSE"
edition = "2018"

[[bin]]
name = "cargo-semverfork"
path = "src/bin/cargo_semver.rs"

[[bin]]
name = "rust-semververfork"
path = "src/bin/rust_semverver.rs"

[[bin]]
name = "rust-semverfork-public"
path = "src/bin/rust_semver_public.rs"

[dependencies]
cargo = "0.45"
crates-io = "0.32"
curl = "0.4.21"
env_logger = "0.7"
anyhow = "1.0.27"
log = "0.4"
rand = "0.7"
semver = "0.10"
serde = { version = "1.0.84", features = ["derive"] }
serde_json = "1.0.34"
quote = "1.0.3"

[dev-dependencies]
quickcheck = "0.9"
